<resources>
    <string name="app_name">Demo Compose News Browser</string>
    // 標題
    <string name="news_list_title">新聞列表</string>
    <string name="news_detail_title">新聞內容</string>


    <string name="like_news_btn_des">Like the news.</string>

    // 錯誤字串
    <string name="error_no_news">哇，目前沒有對應的新聞資料</string>
    <string name="error_check_internet">哇，資料載入失敗，請重新確認網路狀況。</string>
    <string name="reload">重新載入</string>
    <string name="liked_news_title">收藏新聞</string>
    <string name="dialog_confirm">確定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_delete_title">刪除</string>
    <string name="dialog_delete_body">確定要刪除此則新聞?</string>
    <string name="empty_liked_news">目前沒有收藏的新聞唷!</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="back_press">Back Press</string>
    <string name="like_button">Like Button</string>
</resources>